--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
      <img class="home-icon" src="assets/images/imagesofLAlogo.jpg">
      <!-- <h1 class="home-title"> {{ site.title }} </h1> -->
-     <h1 class="home-title">Images of LA <br />Visualizing Los Angeles through Data</h1>
+     <h1 class="home-title">Water in Los Angeles <br />Water LA</h1>
      <hr />
      {{ content }}
 
