--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-     <img class="home-icon" src="assets/images/imagesofLAlogo.jpg">
+     <img class="home-icon" src="assets/images/logoWater2.png">
      <!-- <h1 class="home-title"> {{ site.title }} </h1> -->
      <h1 class="home-title">Water in Los Angeles</h1>
      <hr />
